# bpx_sdk_open

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
bpx_sdk/: __init__.py  __init__.pyi
example/: example_options.h  example_options.py  joint_level_control_example.cpp  joint_level_control_example.py  motion_level_control_example.cpp  motion_level_control_example.py  request_robot_state_example.cpp  request_robot_state_example.py
include/: bpx_sdk_config.h  bpx_sdk_version.h  joint_level_control.h  motion_level_control.h  motion_types.h  request_robot_state.h
lib/: bpx_sdk_x86_64.lib  libbpx_sdk_aarch64.dylib
python/: bpx_sdk_py.cpp
scripts/: build_wheels.py
wheelhouse/: bpx_sdk_open-1.0.4-cp310-cp310-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.4-cp310-cp310-macosx_26_0_arm64.whl  bpx_sdk_open-1.0.4-cp310-cp310-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.4-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.4-cp310-cp310-win_amd64.whl  bpx_sdk_open-1.0.4-cp311-cp311-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.4-cp311-cp311-macosx_26_0_arm64.whl  bpx_sdk_open-1.0.4-cp311-cp311-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.4-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.4-cp311-cp311-win_amd64.whl  bpx_sdk_open-1.0.4-cp312-cp312-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.4-cp312-cp312-macosx_26_0_arm64.whl  bpx_sdk_open-1.0.4-cp312-cp312-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.4-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.4-cp312-cp312-win_amd64.whl  bpx_sdk_open-1.0.4-cp313-cp313-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.4-cp313-cp313-macosx_26_0_arm64.whl  bpx_sdk_open-1.0.4-cp313-cp313-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.4-cp313-cp313-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.4-cp313-cp313-win_amd64.whl  bpx_sdk_open-1.0.4-cp314-cp314-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.4-cp314-cp314-macosx_26_0_arm64.whl  bpx_sdk_open-1.0.4-cp314-cp314-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.4-cp314-cp314-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.4-cp314-cp314-win_amd64.whl  bpx_sdk_open-1.0.4-cp38-cp38-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.4-cp38-cp38-macosx_26_0_arm64.whl  bpx_sdk_open-1.0.4-cp38-cp38-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.4-cp38-cp38-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.4-cp38-cp38-win_amd64.whl  bpx_sdk_open-1.0.4-cp39-cp39-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.4-cp39-cp39-macosx_26_0_arm64.whl  bpx_sdk_open-1.0.4-cp39-cp39-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.4-cp39-cp39-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.4-cp39-cp39-win_amd64.whl  bpx_sdk_open-1.0.6-cp310-cp310-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.6-cp310-cp310-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.6-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.6-cp310-cp310-win_amd64.whl  bpx_sdk_open-1.0.6-cp311-cp311-macosx_11_0_arm64.whl  (+23 more)
